<resources>
    <string name="app_name">studyDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ripple_background">RippleBackgroundActivity</string>
    <string name="title_activity_ripple_view">RippleView</string>
    <string name="title_activity_ripple">rippleActivity</string>
    <string name="title_activity_surface_view">SurfaceViewActivity</string>
    <string name="title_activity_stikky_header">StikkyHeaderActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scroll_view">ScrollViewActivity</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <!--menu -->
    <string name="action_recycler">sample Recycler</string>
    <string name="action_card">card+recycler</string>
    <string name="action_mood">mood recycler</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="action_settings">Settings</string>
    <string name="load_weather">加载天气</string>
    <string name="city_code_hint">填写城市代码</string>
    <string name="title_activity_volley_gson">VolleyGsonActivity</string>
    <string name="http_url_hint">填写网络地址</string>
    <string name="load_data">加载数据</string>
    <string name="action_string">string</string>
    <string name="action_json">json</string>
    <string name="action_image">image</string>
    <string name="json">Web Json</string>
    <string name="gson">Gson</string>
    <string name="local_json">Local Json</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="title_activity_chart_base">ChartBaseActivity</string>
    <string name="single_line">single line chart</string>
    <string name="double_line">double line Chart</string>
    <string name="ecg_line">ecg line chart</string>
    <string name="title_activity_ecg_chart">EcgChartActivity</string>
    <string name="title_activity_ecg_custom">EcgCustomActivity</string>
    <string name="ecg_custom">ecg custom</string>
    <string name="change_color">change color</string>
    <string name="title_activity_material">MaterialActivity</string>
    <string name="drawer_txt">drawer</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="action_photo_view">PhotoView</string>
    <string name="action_gif_view">gif view</string>
    <string name="action_video_view">video view</string>
    <string name="material_normal">material normal</string>
    <string name="title_activity_normal">NormalActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="material_pro">material pro</string>
    <string name="material_dialog">material dialog</string>
    <string name="pop_window">pop window</string>
    <string name="show_dialog">show dialog</string>
    <string name="action_enable_tab">enable tab</string>
    <string name="title_activity_jni">JniActivity</string>
    <string name="title_activity_ok_http">OkHttpActivity</string>
    <string name="title_activity_custom_view">CustomViewActivity</string>
    <string name="title_activity_recycler_demoe">RecyclerDemoeActivity</string>
</resources>
