<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <Button
        android:id="@+id/single_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_line"
        android:onClick="onClick"
        style="?android:attr/buttonBarButtonStyle"/>


    <Button
        android:id="@+id/double_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/double_line"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/ecg_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ecg_line"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        style="?android:attr/buttonBarButtonStyle"/>


</LinearLayout>
