<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <Spinner
                android:id="@+id/data_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

            </Spinner>
        </LinearLayout>


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/http_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/http_url_hint"/>

        <RadioGroup
            android:id="@+id/json_group"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_json"
                android:id="@+id/radio_local_json" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/json"
                android:id="@+id/radio_json"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gson"
                android:id="@+id/radio_gson" />

        </RadioGroup>


        <Button
            android:id="@+id/load_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_data"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/display_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="log:\n"/>
        </ScrollView>


        <ImageView
            android:id="@+id/display_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
